# transcription-benchmarks

./: .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json
.github/workflows/: test.yml
src/transcription_benchmarks/: __init__.py  _bench.py
src/transcription_benchmarks/app_types/: bench.py
